--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* background-color: cadetblue; */
 }
 
-.App-link {
-  color: #61dafb;
-}
+button {
+  font-size: 2em;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  background: none;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ ul { display: flex;
+  padding: 0;
+ }
+
+ li {
+  margin: 0 20px;
+  list-style: none;
+  padding: 0;
+ }
+
+ .instructions{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .instructions img {
+  width: 100px;
+  height: 100px;
+ }
